add metrics and healthz endpoints
