# cmd/root.go
@@ -22,6 +22,7 @@ import (
 	"os/signal"
 	"time"
 
+	"github.com/ansrivas/fiberprometheus/v2"
 	"github.com/go-geospatial/go-stac-server/common"
 	"github.com/go-geospatial/go-stac-server/database"
 	"github.com/go-geospatial/go-stac-server/middleware"
@@ -102,6 +103,10 @@ var rootCmd = &cobra.Command{
 
 		// Add timing headers
 		app.Use(middleware.Timer())
+
+		prometheus := fiberprometheus.New("go-stac-server")
+		prometheus.RegisterAt(app, "/metrics")
+		app.Use(prometheus.Middleware)
 
 		// Setup routes
 		router.SetupRoutes(app)
